--- a/src/Avatar.stories.mdx
+++ b/src/Avatar.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, ArgsTable, Canvas } from '@storybook/addon-docs/blocks';
 import { select, boolean } from '@storybook/addon-knobs';
 
 import { Avatar } from './Avatar';
@@ -11,7 +11,7 @@ import { Avatar } from './Avatar';
 
 Use an avatar for attributing actions or content to specific users. The user's name should _always_ be present when using Avatar – either printed beside the avatar or in a tooltip.
 
-<Preview withToolbar>
+<Canvas withToolbar>
   <Story name="standard">
     <Avatar
       size="large"
@@ -19,9 +19,9 @@ Use an avatar for attributing actions or content to specific users. The user's n
       src="https://avatars2.githubusercontent.com/u/132554"
     />
   </Story>
-</Preview>
+</Canvas>
 
-<Props of={Avatar} />
+<ArgsTable of={Avatar} />
 
 ## Usage
 
