--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -1,9 +1,9 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Design System|Introduction" />
+<Meta title="Design System/Introduction" />
 
-# Introduction to the Learn Storybook design system
+# Introduction to the Storybook design system tutorial
 
-The Learn Storybook design system is a subset of the full [Storybook design system](https://github.com/storybookjs/design-system/), created as a learning resource for those interested in learning how to write and publish a design system using best practice techniques.
+The Storybook design system tutorial is a subset of the full [Storybook design system](https://github.com/storybookjs/design-system/), created as a learning resource for those interested in learning how to write and publish a design system using best practice techniques.
 
-Learn more at [Learn Storybook](https://learnstorybook.com).
+Learn more in the [Storybook tutorials](https://storybook.js.org/tutorials/).
