--- a/src/Avatar.stories.mdx
+++ b/src/Avatar.stories.mdx
@@ -8,8 +8,7 @@ import { Avatar } from './Avatar';
   argTypes={{
     loading: {
       control: 'boolean',
-      description:
-        'Use the loading state to indicate that the data Avatar needs is still loading.',
+      description: 'Use the loading state to indicate that the data Avatar needs is still loading.',
       table: {
         type: { summary: 'boolean' },
         defaultValue: { summary: false },
@@ -33,8 +32,7 @@ import { Avatar } from './Avatar';
       },
     },
     size: {
-      description:
-        'Avatar comes in four sizes. In most cases, you’ll be fine with `medium`.',
+      description: 'Avatar comes in four sizes. In most cases, you’ll be fine with `medium`.',
       table: {
         defaultValue: {
           summary: 'medium',
@@ -77,26 +75,10 @@ Avatar is used to represent a person or an organization. By default the avatar s
 
 <Story name="sizes">
   <div>
-    <Avatar
-      size="large"
-      username="Tom Coleman"
-      src="https://avatars2.githubusercontent.com/u/132554"
-    />
-    <Avatar
-      size="medium"
-      username="Tom Coleman"
-      src="https://avatars2.githubusercontent.com/u/132554"
-    />
-    <Avatar
-      size="small"
-      username="Tom Coleman"
-      src="https://avatars2.githubusercontent.com/u/132554"
-    />
-    <Avatar
-      size="tiny"
-      username="Tom Coleman"
-      src="https://avatars2.githubusercontent.com/u/132554"
-    />
+    <Avatar size="large" username="Tom Coleman" src="https://avatars2.githubusercontent.com/u/132554" />
+    <Avatar size="medium" username="Tom Coleman" src="https://avatars2.githubusercontent.com/u/132554" />
+    <Avatar size="small" username="Tom Coleman" src="https://avatars2.githubusercontent.com/u/132554" />
+    <Avatar size="tiny" username="Tom Coleman" src="https://avatars2.githubusercontent.com/u/132554" />
   </div>
 </Story>
 
